--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,27 @@ footer{padding:18px 24px;text-align:center;color:#fff;background:#07243a;margin-
     padding-top: 80px;
   }
 }
+.footer {
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 40px;
+  color: #406b86;
+}
+
+.footer .social-links {
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+  margin-bottom: 10px;
+}
+
+.footer .social-links img {
+  width: 32px;
+  height: 32px;
+  filter: brightness(0.2);
+  transition: 0.2s ease;
+}
+
+.footer .social-links img:hover {
+  filter: brightness(0.5);
+}
